# EmbeddedKDE

./: .gitignore
configs/uconfig/: .config  amlogic_koffice_config  amlogic_qtx11_config
docs/kde/: build-kdelibs.txt  build-kdepimlibs.txt  build-koffice.txt  build-okular.txt  config-koffice.txt  fix_koffice_building.sh  kde_todo_lists.txt
fs/amskeleton/etc/: profile
package/: Config.in  Makefile.cmake.in
package/boost/: Config.in  boost-1.45.0-build_configure.jam.patch  boost.mk
package/boost-jam/: Config.in
package/gcrypt/: Config.in  gcrypt.mk  gpgsm.arm  gpgsm.i386  libgpg-error.tar.bz2
package/gcrypt/gnupg/: Config.in  gnupg.mk
package/gcrypt/gpa/: Config.in  gpa.mk
package/gcrypt/gpgme/: Config.in  gpgme-1.3.1-gpgme-config.in.patch  gpgme.mk
package/gcrypt/libassuan/: Config.in  libassuan.mk
package/gcrypt/libgpg-error/: br_libgpg-error.tar.bz2  libgpg-error.mk
package/gcrypt/libksda/: Config.in  libksda.mk
package/gcrypt/pth/: Config.in  pth-2.0.7-pth-config.in.patch  pth-2.0.7-pthread-config.in.patch  pth.mk
package/kde/: Config.in  build.txt  kde.mk
package/kde/dbusmenu-qt/: Config.in  dbusmenu-qt.mk
package/kde/eigen/: Config.in  eigen.mk
package/kde/eigen2/: Config.in  eigen2.mk
package/kde/grantlee/: Config.in  (+1 more)
package/kmisc/: Config.in  kmisc.mk
package/ksupport/: Config.in  ksupport.mk  subdirs.txt  todo.txt
package/ksupport/polkit-kde-1/: CMakeLists.txt  Config.in  polkit-kde-1.mk
package/qt/: Config.in  Config.keyboard.in  Config.mouse.in  Config.x11.in  qt.mk
package/udev/: udev-173-input_id.c.patch  udev.mk
(+318 files in other folders)
